--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ NODE_ENV=development
 BASE_URL=http://localhost:5000
 
 # Database Configuration
-MONGODB_URI=mongodb+srv://tbswebtechnology:Khushbu%40123@cluster0.5aecd.mongodb.net/growcify-admin
+MONGODB_URI=mongodb+srv://tbswebtechnology:Khushbu%40123@cluster0.5aecd.mongodb.net/hotspot-retail-admin
 
 # JWT Configuration
 JWT_SECRET=hjbhgfcgfcgh
